crates/uitest/fixtures/ty/const_ty/trait_const_requires_impl.snap
---
source: crates/uitest/tests/ty.rs
expression: diags
input_file: fixtures/ty/const_ty/trait_const_requires_impl.fe
---
error[6-0003]: trait bound is not satisfied
  ┌─ trait_const_requires_impl.fe:8:10
  │
8 │     arr: [u8; <MissingConstTypeStruct as MissingConstType>::C],
  │          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `MissingConstTypeStruct` doesn't implement `MissingConstType`
